颜色的修改

--- a/game-website/data/i18n/en.json
+++ b/game-website/data/i18n/en.json
@@ -15,7 +15,7 @@
     "lang": "Language"
   },
   "index": {
-    "heroTitle": "Craft a universe for players",
+    "heroTitle": "Craft a universe for female players",
     "heroSub": "From competitive battles to vast galactic exploration, we put creativity and playability into every title. Join millions on their adventure.",
     "browseGames": "Browse Games",
     "viewNews": "View Latest News",
@@ -70,5 +70,3 @@
     "preview": "Preview"
   }
 }
-
-
