--- a/game-website/data/i18n/zh.json
+++ b/game-website/data/i18n/zh.json
@@ -15,7 +15,7 @@
     "lang": "语言"
   },
   "index": {
-    "heroTitle": "打造属于玩家的宇宙",
+    "heroTitle": "打造属于女生玩家的宇宙",
     "heroSub": "从激烈的竞技对战到广袤的银河探索，我们致力于在每个作品中注入创造力与可玩性。加入数百万玩家的冒险旅程。",
     "browseGames": "浏览游戏目录",
     "viewNews": "查看最新公告",
@@ -70,5 +70,3 @@
     "preview": "预览"
   }
 }
-
-
