--- a/game-website/data/i18n/zh.json
+++ b/game-website/data/i18n/zh.json
@@ -1,46 +1,43 @@
 {
-  "brand": "Orion Games",
+  "brand": "SkyWings",
   "nav": {
     "home": "首页",
     "games": "游戏",
-    "news": "新闻",
-    "matches": "比赛",
+    "destinations": "旅游目的地",
+    "guides": "飞行指南",
     "community": "社区",
     "support": "支持",
-    "careers": "招聘",
     "about": "关于",
     "contact": "联系",
-    "playNow": "立即游玩",
     "theme": "切换主题",
-    "lang": "语言"
+    "playNow": "立即游玩"
   },
   "index": {
-    "heroTitle": "打造属于女生玩家的宇宙",
-    "heroSub": "从激烈的竞技对战到广袤的银河探索，我们致力于在每个作品中注入创造力与可玩性。加入数百万玩家的冒险旅程。",
-    "browseGames": "浏览游戏目录",
-    "viewNews": "查看最新公告",
-    "popular": "热门游戏",
-    "features": "特色模块",
-    "spotlight": "焦点推荐",
-    "latestNews": "最新新闻",
+    "heroTitle": "开启属于女生的飞行旅游冒险",
+    "heroSub": "专为女生打造的飞行旅游游戏，探索世界美景，体验自由飞行的乐趣。从浪漫的巴黎到神秘的马尔代夫，开启你的飞行之旅！",
+    "browseGames": "开始游戏",
+    "viewDestinations": "查看目的地",
+    "popularGames": "热门游戏",
+    "features": "特色功能",
+    "spotlight": "热门推荐",
+    "latest": "最新动态",
     "viewAll": "查看全部",
-    "moreNews": "更多资讯",
+    "moreDiscussions": "更多讨论",
     "joinCommunity": "加入社区"
   },
-  "games": {
-    "title": "全部游戏",
-    "search": "搜索游戏名称...",
-    "all": "全部类型"
+  "discussions": {
+    "title": "讨论区",
+    "search": "搜索讨论话题...",
+    "all": "全部话题"
   },
-  "news": {
-    "title": "新闻与公告",
-    "search": "搜索新闻...",
-    "rss": "订阅 RSS",
-    "readMore": "阅读更多"
+  "aircrafts": {
+    "title": "飞行器展示",
+    "search": "搜索飞行器名称...",
+    "all": "全部类型"
   },
   "community": {
     "title": "社区",
-    "ugc": "UGC 创作",
+    "ugc": "用户分享",
     "submit": "提交作品",
     "search": "搜索作品标题或作者...",
     "typeAll": "全部类型",
@@ -51,7 +48,7 @@
   "support": {
     "title": "帮助与支持",
     "search": "搜索问题...",
-    "rules": "玩家守则",
+    "rules": "社区守则",
     "security": "安全中心",
     "faq": "常见问题",
     "ticket": "提交工单",
